tests/ui/type-alias-impl-trait/issue-60371.stderr
error[E0277]: the trait bound `(): Bug` is not satisfied
  --> $DIR/issue-60371.rs:12:40
   |
LL |     const FUN: fn() -> Self::Item = || ();
   |                                        ^^ the trait `Bug` is not implemented for `()`
   |
   = help: the trait `Bug` is implemented for `&()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
